Replaced the dart-scss module with sass for the gulp-sass package

--- a/app/scss/utilities/functions.scss
+++ b/app/scss/utilities/functions.scss
@@ -1,5 +1,7 @@
+@use "sass:math";
+
 // Helps to convert pixels to rem
 
 @function rem($pixels, $context: 16){
-    @return ($pixels / $context) * 1rem;
+    @return math.div($pixels , $context) * 1rem;
 }
