Corrected some colors in the colors.scss of the global partial folder

--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -38,7 +38,7 @@
     --light-bg: hsl(225, 100%, 98%); // Very Pale Blue (Top BG Pattern)
     --light-card-bg: hsl(227, 47%, 96%); // Light Grayish Blue (Card BG)
     --light-gray-text: hsl(228, 12%, 44%); // Dark Grayish Blue (Text)
-    --light-dark-text: hsl(230, 17%, 14%) //  Very Dark Blue (Text)
+    --light-dark-text: hsl(230, 17%, 14%); //  Very Dark Blue (Text)
 
 }
 
