--- a/app/scss/components/card.scss
+++ b/app/scss/components/card.scss
@@ -1,5 +1,120 @@
 @use '../utilities' as *;
 
 .card{
-    padding: rem(20);
+    position: relative;
+    background-color: var(--dark-card-bg);
+    color: var(--dark-text);
+    padding: rem(25);
+    text-align: center;
+    border-radius: rem(5);
+    overflow: hidden;
+
+
+    &--facebook{
+        border-top: rem(5) solid var(--facebook);
+    }
+
+    &--twitter{
+        border-top: rem(5) solid var(--twitter);
+    }
+
+    &--instagram{
+        // To balance the card header margin
+        padding-top: calc(rem(25) + rem(5));
+
+        &::before{
+            content: '';
+            height: rem(5);
+            width: 100%;
+            position: absolute;
+            top: 0;
+            right: 0;
+            background-image: linear-gradient( 
+            225deg, 
+                var(--instagram-start) 0%, 
+                var(--instagram-middle) 50.9%, 
+                var(--instagram-end) 98.02%
+            );
+        }
+
+    }
+
+    &--youtube{
+        border-top: rem(5) solid var(--youtube);
+    }
+
+    &__header{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: rem(8);
+        margin-bottom: rem(28);
+    }
+   
+    &__icon{
+        width: rem(20);
+        height: rem(20);
+    }
+
+
+    &__username{
+       font-size: rem(12);
+       font-weight: 700;
+    }
+
+
+    &__body{
+        margin-bottom: rem(25);
+    }
+
+    &__count{
+
+        color: var(--white);
+        font-weight: 700;
+        letter-spacing: rem(-2);
+        line-height: 1;
+        margin-bottom: rem(4);
+
+        &--big{
+          font-size: rem(56);
+        }
+
+        &--small{
+          
+        }
+    }
+
+
+
+    &__label{
+        font-size: rem(12);
+        font-weight: 400;
+        text-transform: uppercase;
+        letter-spacing: rem(5);
+    }
+
+
+    &__footer{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: rem(2)
+    }
+
+    &__change{
+
+        font-size: rem(12);
+        font-weight: 700;
+     
+
+        &--up{
+            color: var(--limegreen);
+        }
+
+        &--down{
+            color: var(--brightred);
+        }
+
+    }
+
 }
