--- a/app/scss/components/toggle.scss
+++ b/app/scss/components/toggle.scss
@@ -1,23 +1,118 @@
 @use '../utilities' as *;
 
 .toggle{
+    display: grid;
+    grid-template-columns: 1fr rem(60) 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    gap: rem(4.8) rem(12);
     border: none;
+    margin: 0;
+
+    label{
+        font-size: rem(14);
+        
+        &:hover{
+            cursor: pointer;
+        }
+
+        &[for = "dark"]{
+            grid-column: 1 / 2;
+            justify-self: end;
+        }    
+        
+        &[for = "system"]{
+            grid-column: 1 / 4;
+            grid-row: 2 / 3;
+            justify-self: center;
+            align-self: start;
+        }
+
+        &[for = "light"]{
+            grid-column: 3 / 4;
+        }
+    }
 
     &__wrapper{
+        position: relative;
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+        height: rem(24);
 
         input[type="radio"]{
             opacity: 0;
+            margin: 0 rem(-4) 0 rem(-4);
+            width: rem(24);
+            height: rem(24);
+
+            &:hover{
+                cursor: pointer;
+            }
+
+            // Style switcher border on focus of radio button
+            &:focus ~ .toggle__switcher{
+                border: rem(2) solid var(--white);
+            }
+
         }
     }
 
     &__background{
-        
+        display:block;
+        height: 100%;
+        position: absolute;
+        width: 100%;
+        top: 0;
+        border-radius: rem(12);
+        overflow: hidden;
+
+        background-image: linear-gradient( 
+            225deg, 
+            var(--toggle-bg-start) 0%, 
+            var(--toggle-bg-end) 98.02%
+        );
+
+        z-index: -1; // Sends the background behind
+        pointer-events: none; // removes pointability on a section
     }
 
     &__switcher{
-        width: rem(16);
-        height: rem(16);
+        display: block;
+        position: absolute;
+        top: rem(3);
+        left: rem(3);
+        right: 100%;
+        width: rem(18);
+        height: rem(18);
         border-radius: 50%;
-        background-color: var(--toggle);
+        background-color: var(--dark-bg);
+        transition: all 350ms ease;
     }
+
+
+    input[type="radio"],
+    input[type="radio"]:focus //for keyboard
+    {
+
+        &#light:checked{
+
+            ~ .toggle__switcher{
+                right: rem(3);
+                left: calc(100% - rem(21));
+            }
+        }
+
+
+        &#system:checked{
+
+            ~ .toggle__switcher{
+                right: auto;
+                left: 50%;
+                translate: -50%;
+            }
+        }
+
+    }
+
+
+
 }
