--- a/app/scss/components/card.scss
+++ b/app/scss/components/card.scss
@@ -9,7 +9,6 @@
     border-radius: rem(5);
     overflow: hidden;
 
-
     &--facebook{
         border-top: rem(5) solid var(--facebook);
     }
@@ -30,9 +29,9 @@
             top: 0;
             right: 0;
             background-image: linear-gradient( 
-            225deg, 
+            -225deg, 
                 var(--instagram-start) 0%, 
-                var(--instagram-middle) 50.9%, 
+                var(--instagram-middle) 50.91%, 
                 var(--instagram-end) 98.02%
             );
         }
@@ -80,8 +79,9 @@
         }
 
         &--small{
-          
+            font-size: rem(34);
         }
+
     }
 
 
