--- a/app/scss/components/card-grid.scss
+++ b/app/scss/components/card-grid.scss
@@ -2,16 +2,16 @@
 
 .card-grid{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 2fr 1fr;
     grid-template-rows: repeat(2, 1fr);
     gap: rem(30);
+    justify-items: start;
     padding: rem(15) rem(25);
 
     &__title{
-        justify-self: start;
         align-self: center;
         text-align: left;
-        font-size: rem(12);
+        font-size: rem(14);
         font-weight: 700;
     }
 
@@ -24,7 +24,6 @@
     }
 
     &__count{
-        justify-self: start;
         font-weight: 700;
         color: var(--white);
     }
