--- a/app/scss/components/card-grid.scss
+++ b/app/scss/components/card-grid.scss
@@ -3,7 +3,7 @@
 .card-grid{
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(2, auto);
     gap: rem(30);
     justify-items: start;
     padding: rem(15) rem(25);
