--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -30,6 +30,7 @@
     --dark-bg: hsl(230, 17%, 14%); // Very Dark Blue (BG)
     --dark-top-bg: hsl(232, 19%, 15%); // Very Dark Blue (Top BG Pattern)
     --dark-card-bg: hsl(228, 28%, 20%); // Dark Desaturated Blue (Card BG)
+    --dark-card-hover: hsl(228, 25%, 27%);
     --dark-text: hsl(228, 34%, 66%); // Desaturated Blue (Text)
 
     // Light Theme
