--- a/app/scss/components/card-grid.scss
+++ b/app/scss/components/card-grid.scss
@@ -25,7 +25,7 @@
 
     &__count{
         font-weight: 700;
-        color: var(--white);
+        color: var(--text-body-color);
     }
 
     &__percentage{
