--- a/app/scss/components/card.scss
+++ b/app/scss/components/card.scss
@@ -2,17 +2,17 @@
 
 .card{
     position: relative;
-    background-color: var(--dark-card-bg);
-    color: var(--dark-text);
+    background-color: var(--card-bg);
+    color: var(--text-color);
     padding: rem(25);
     text-align: center;
     border-radius: rem(5);
     overflow: hidden;
-    transition: background-color 350ms ease-in-out;
+    cursor: pointer;
+    transition: background-color 150ms ease-in-out;
 
     &:hover{
-        cursor: pointer;
-        background-color: var(--dark-card-hover);
+        background-color: var(--card-hover);
     }
 
     &--facebook{
@@ -74,7 +74,7 @@
 
     &__count{
 
-        color: var(--white);
+        color: var(--text-body-color);
         font-weight: 700;
         letter-spacing: rem(-2);
         line-height: 1;
