--- a/app/scss/components/toggle.scss
+++ b/app/scss/components/toggle.scss
@@ -2,40 +2,30 @@
 
 .toggle{
     display: grid;
-    grid-template-columns: 1fr rem(60) 1fr;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: 1fr rem(48);
     gap: rem(4.8) rem(12);
     border: none;
     margin: 0;
+    align-items: center;
 
-    label{
+    &__label{
         font-size: rem(14);
-        
+        font-weight: 700;
+        color: var(--toggle);
+      
+        &[for="dark"]{
+            grid-column: 1 / 2;
+        }
+
         &:hover{
             cursor: pointer;
         }
 
-        &[for = "dark"]{
-            grid-column: 1 / 2;
-            justify-self: end;
-        }    
-        
-        &[for = "system"]{
-            grid-column: 1 / 4;
-            grid-row: 2 / 3;
-            justify-self: center;
-            align-self: start;
-        }
-
-        &[for = "light"]{
-            grid-column: 3 / 4;
-        }
     }
 
     &__wrapper{
         position: relative;
         grid-column: 2 / 3;
-        grid-row: 1 / 2;
         height: rem(24);
 
         input[type="radio"]{
@@ -49,9 +39,9 @@
             }
 
             // Style switcher border on focus of radio button
-            &:focus ~ .toggle__switcher{
-                border: rem(2) solid var(--white);
-            }
+            // &:focus ~ .toggle__switcher{
+            //     border: rem(2) solid var(--white);
+            // }
 
         }
     }
@@ -64,12 +54,7 @@
         top: 0;
         border-radius: rem(12);
         overflow: hidden;
-
-        background-image: linear-gradient( 
-            225deg, 
-            var(--toggle-bg-start) 0%, 
-            var(--toggle-bg-end) 98.02%
-        );
+        background: var(--toggle-bg);
 
         z-index: -1; // Sends the background behind
         pointer-events: none; // removes pointability on a section
@@ -84,8 +69,8 @@
         width: rem(18);
         height: rem(18);
         border-radius: 50%;
-        background-color: var(--dark-bg);
-        transition: all 350ms ease;
+        background-color: var(--toggle-switcher);
+        transition: all 350ms ease-in-out;
     }
 
 
