--- a/app/scss/globals/boilerplate.scss
+++ b/app/scss/globals/boilerplate.scss
@@ -11,6 +11,20 @@ body{
     margin: 0;
     padding: 0;
     font-family: var(--font-inter);
-    background: var(--dark-bg);
-    color: var(--white);
+    background: var(--background);
+    color: var(--text-body-color);
+}
+
+.screenreader-only{
+    opacity: 0;
+    position: absolute;
+    top: auto;
+    left: -10000px;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+}
+
+.hidden{
+    display: none;
 }
