--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -1,4 +1,33 @@
 
+@mixin light-mode{
+    --background: var(--light-bg);
+    --card-bg: var(--light-card-bg);
+    --card-hover: var(--light-card-hover);
+    --text-color: var( --light-gray-text);
+    --text-body-color: var(--light-dark-text);
+    --toggle: var(--toggle-light);
+    --toggle-bg: var(--toggle-bg-light);
+    --toggle-switcher: var(--toggle-light-switcher);
+
+}
+
+
+@mixin dark-mode{
+        --background: var(--dark-bg);
+        --card-bg: var(--dark-card-bg);
+        --card-hover: var(--dark-card-hover);
+        --text-color: var(--dark-text);
+        --text-body-color: var(--white);
+        --toggle: var(--white);
+        --toggle-bg: linear-gradient( 
+            225deg, 
+            var(--toggle-bg-start) 0%, 
+            var(--toggle-bg-end) 98.02%
+        );
+    
+        --toggle-switcher: var(--dark-bg);
+}
+
 :root{
 
     // Primary
@@ -20,10 +49,14 @@
 
     // Light Theme Toggle
 
-    --toggle: hsl(230, 22%, 74%);
+    --toggle-bg-light: hsl(220, 22%, 74%);
+    --toggle-light: hsl(230, 19%, 60%);
+    --toggle-light-switcher : hsl(228, 46%, 96%);
 
     // Neutral
     --white: hsl(0, 0%, 100%);
+
+
     
     // Dark Theme
 
@@ -36,10 +69,49 @@
     // Light Theme
 
     --light-bg: hsl(225, 100%, 98%); // Very Pale Blue (Top BG Pattern)
-    --light-card-bg: hsl(227, 47%, 96%); // Light Grayish Blue (Card BG)
-    --light-gray-text: hsl(228, 12%, 44%); // Dark Grayish Blue (Text)
+    --light-card-bg: hsl(222, 50%, 96%); // Light Grayish Blue (Card BG)
+    --light-card-hover: hsl(228, 33%, 91%);
+    --light-gray-text: hsl(230, 12%, 44%); // Dark Grayish Blue (Text)
     --light-dark-text: hsl(230, 17%, 14%); //  Very Dark Blue (Text)
 
+     // Color Scheme Default
+     @include light-mode;
+
 }
+
+
+
+// Dark Color Scheme
+@media(prefers-color-scheme: dark){
+
+    :root{
+   
+        @include dark-mode;
+    }
+
+}
+
+
+
+body.light{
+    // Color Scheme Default
+    @include light-mode;
+}
+
+
+
+body.dark{
+    @include dark-mode; 
+}
+
+
+
+
+
+    
+
+
+
+
 
 
